[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-axiora"
version = "0.1.0"
description = "LangChain tools for Japanese financial data — EDINET filings, XBRL, company analysis (Axiora API)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Onkar Dahale", email = "onkardahale@protonmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "langchain", "axiora", "japan", "japanese", "finance", "financial-data",
    "edinet", "xbrl", "JPX", "filings", "annual-report",
    "AI-agent", "LLM-tools", "screening", "company-analysis",
]
dependencies = [
    "langchain-core>=0.3,<2",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://axiora.dev"
Documentation = "https://docs.axiora.dev"
Repository = "https://github.com/axiora-dev/langchain-axiora"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_axiora"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
